Fix the spacing to solve the issue with the last element

--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -5,7 +5,7 @@
 }
 
 .Card {
-  margin-bottom: 1.875em;
+  margin: 0 1% 2%;
 }
 
 .Card__Icon img {
