--- a/src/components/Card/CardGrid.css
+++ b/src/components/Card/CardGrid.css
@@ -2,10 +2,11 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
+  margin: 0 -1%;
 }
 
 .CardGrid:after {
   /* Display the last row properly: https://stackoverflow.com/a/34816625 */
   content: "";
-  width: 31%;
+  flex: auto;
 }
